fix extra padding on bullet lists

--- a/src/css/content.scss
+++ b/src/css/content.scss
@@ -511,10 +511,6 @@ $color-dark-yellow: #DAA520;
   display: none;
 }
 
-.edit-comment-hide ul {
-  padding-left: 30px !important;
-}
-
 .btn-group-grid {
   display: flex;
   flex-flow: row wrap;
